--- a/carpool-server/.gitignore
+++ b/carpool-server/.gitignore
@@ -1,22 +1,36 @@
-# Ignore IntelliJ IDEA project files
-.idea/
-
-# Ignore Python virtual environment
+# Python virtual environment
 venv/
+env/
+.env/
+.venv/
 
-# Optional: Ignore common Python artifacts
+# Python cache files
 __pycache__/
 *.py[cod]
+*.so
 *.pyo
 *.pyd
-*.pylint.d
-*.tox/
-*.coverage
+.Python
+*.pyc
+.pytest_cache/
+.coverage
+.tox/
+.nox/
 *.egg-info/
 *.egg
-*.log
-*.sqlite3
+dist/
+build/
+.eggs/
+*.manifest
+*.spec
+.cache
+.hypothesis/
+.python-version
 
-# Optional: Ignore system files
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
 .DS_Store
 Thumbs.db
