--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
 
   provider: ^6.1.2
 
+  flutter_secure_storage: ^9.2.2
+  jwt_decoder: ^2.0.1
+
 
 dev_dependencies:
   flutter_test:
